<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="Home" />

    <item
        android:id="@+id/bmiCalculatorFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="BMI" />

    <item
        android:id="@+id/calorieCalculatorFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="Kalorie" />

    <item
        android:id="@+id/shoppingListFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="Zakupy" />

</menu>